--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -408,7 +408,7 @@
     <!-- Message shown when opening an SMS conversation with SMS disabled and there are no exported messages -->
     <string name="ConversationActivity__sms_messaging_is_no_longer_supported_in_signal_invite_s_to_to_signal_to_keep_the_conversation_here">SMS mesajlaşması artıq Signal-da dəstəklənmir. Söhbəti burada davam etdirmək üçün %1$s Signal-a dəvət edin.</string>
     <!-- Action button shown when opening an SMS conversation with SMS disabled and there are no exported messages -->
-    <string name="ConversationActivity__invite_to_signal">Signal-a dəvət edin</string>
+    <string name="ConversationActivity__invite_to_signal">Molly-a dəvət edin</string>
     <!-- Snackbar message shown after dismissing the full screen sms export megaphone indicating we\'ll do it again soon -->
     <string name="ConversationActivity__you_will_be_reminded_again_soon">Sizə tezliklə yenidən xatırlatma bildirişi göndəriləcək.</string>
 
